--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "rikumovies",
   "private": true,
+  "description": "Movies collection web app",
+  "author": "Muhammad Akmal Hisyam",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint src --fix & yarn format",
+    "format": "prettier --write src",
+    "type-check": "tsc --noEmit",
+    "release": "standard-version",
+    "push-release": "git push --follow-tags origin main",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.0.7",
@@ -13,10 +21,27 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.0.1",
+    "@commitlint/config-conventional": "^16.0.0",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
-    "eslint": "8.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "eslint": "^8.6.0",
     "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.5",
+    "prettier": "^2.5.1",
     "typescript": "4.5.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/akmalhisyammm/rikumovies"
+  },
+  "bugs": {
+    "url": "https://github.com/akmalhisyammm/rikumovies/issues"
   }
 }
