--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "framer-motion": "^5",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.0.1",
