--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.24.0",
     "framer-motion": "^5",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "swr": "^1.1.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.0.1",
