--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "eslint src --fix & yarn format",
+    "lint:fix": "eslint src --fix && yarn format",
     "format": "prettier --write src",
     "type-check": "tsc --noEmit",
     "release": "standard-version",
@@ -22,6 +22,7 @@
     "@emotion/styled": "^11",
     "axios": "^0.24.0",
     "framer-motion": "^5",
+    "luxon": "^2.3.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.0.1",
     "@commitlint/config-conventional": "^16.0.0",
+    "@types/luxon": "^2.0.9",
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
