chore: initialize version in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rikumovies",
   "private": true,
+  "version": "1.0.0",
   "description": "Movies collection web app",
   "author": "Muhammad Akmal Hisyam",
   "license": "MIT",
