--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.1.5",
     "prettier": "^2.5.1",
+    "standard-version": "^9.3.2",
     "typescript": "4.5.4"
   },
   "repository": {
