refactor: fix typo

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rikumovies",
   "private": true,
   "version": "1.0.0",
-  "description": "Movies collection web app",
+  "description": "Movie collection web app",
   "author": "Muhammad Akmal Hisyam",
   "license": "MIT",
   "scripts": {
