--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^5",
     "luxon": "^2.3.0",
     "next": "12.1.0",
+    "next-pwa": "^5.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
